@@ -4,6 +4,7 @@
  - Refactor of the multiref support to fix issues with child elements (#489)
  - Add workaround to support negative durations (#486)
  - Fix creating XML documents for operations without aguments (#479)
+ - Fix xsd:extension on xsd:group elements (#523)
 
 
 2.2.0 (2017-06-19)
